--- a/Fashion_Admin/composer.json
+++ b/Fashion_Admin/composer.json
@@ -13,6 +13,8 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.2",
+        "botman/botman": "^2.8",
+        "botman/driver-web": "^1.5",
         "cloudinary-labs/cloudinary-laravel": "^2.1",
         "fashion_ai_hien/mylibrary": "dev-main",
         "fruitcake/laravel-cors": "dev-develop",
@@ -21,6 +23,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "3.1.47",
+        "predis/predis": "^2.2",
         "pusher/pusher-php-server": "^7.2",
         "ramsey/uuid": "^4.7"
     },
