--- a/Fashion_EndUser/composer.json
+++ b/Fashion_EndUser/composer.json
@@ -12,6 +12,8 @@
     ],
     "require": {
         "php": "^8.1",
+        "botman/botman": "^2.8",
+        "botman/driver-web": "^1.5",
         "cloudinary-labs/cloudinary-laravel": "^2.1",
         "fashion_ai_hien/mylibrary": "*",
         "fruitcake/laravel-cors": "dev-develop",
@@ -20,6 +22,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
