--- a/Fashion_EndUser/public/.htaccess
+++ b/Fashion_EndUser/public/.htaccess
@@ -23,6 +23,6 @@
     <IfModule mod_headers.c>
         Header set Access-Control-Allow-Origin "http://127.0.0.1:8000"
         Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-        Header set Access-Control-Allow-Headers "Content-Type, Authorization"
+        Header set Access-Control-Allow-Headers "Content-Type, Authorization, X-CSRF-Token, X-Socket-Id"
     </IfModule>
 </IfModule>
